# ezlambda

./: README.md  pyproject.toml  tests.py
src/ezlambda/: __init__.py  variable.py
src/ezlambda.egg-info/: PKG-INFO
