[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegolf"
version = "0.1.0"
description = "Tools for code golfing in Python"
readme = "README.md"
authors = [{ name = "adesanjo"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["code", "golf", "codegolf"]
dependencies = []
requires-python = ">=3.10"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/adesanjo/ezlambda"
